--- a/packaging/linux/flatpak/built-locally/org.mapiah.mapiah.yml
+++ b/packaging/linux/flatpak/built-locally/org.mapiah.mapiah.yml
@@ -11,6 +11,7 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
   - --device=dri
+  - --talk-name=org.freedesktop.portal.OpenURI
 modules:
   - name: mapiah
     buildsystem: simple
