--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   analyzer: ^7.4.5
   charset: ^2.0.0
   collection: ^1.19.0
-  file_picker: ^10.0.0
+  file_picker: 10.2.1
   flutter:
     sdk: flutter
   flutter_localizations:
