Fixed 'opening a TH2 file that calls for an non existent raster image should not raise an exception'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,4 @@ flutter:
     - assets/icons/zoom_plus.png
     - assets/icons/zoom_selection.png
     - assets/icons/zoom-out-scrap.png
+    - assets/images/image_not_found.png
