--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/icons/change-scrap-tool.png
     - assets/icons/org.mapiah.mapiah.png
     - assets/icons/select-tool.png
+    - assets/icons/snap-tool.png
     - assets/icons/zoom_minus.png
     - assets/icons/zoom_one_to_one.png
     - assets/icons/zoom_plus_minus.png
