--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   analyzer: ^7.4.5
   charset: ^2.0.0
   collection: ^1.19.0
-  file_picker: 10.2.1
+  file_picker: ^10.3.3
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -26,7 +26,7 @@ dependencies:
   meta: ^1.0.0
   mobx: ^2.0.0
   open_file: ^3.0.0
-  package_info_plus: ^8.3.0
+  package_info_plus: ^9.0.0
   path: ^1.9.0
   path_drawing: ^1.0.1
   path_provider: ^2.0.0
