--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,11 @@ repository: https://github.com/rsevero/mapiah.git
 issue_tracker: https://github.com/rsevero/mapiah/issues
 
 environment:
-  sdk: '^3.9.0'
+  sdk: "^3.9.0"
 
 # Add regular dependencies here.
 dependencies:
-  analyzer: ^8.1.1
+  analyzer: ^7.7.1
   charset: ^2.0.0
   collection: ^1.19.0
   file_picker: ^10.3.3
@@ -39,6 +39,8 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.15
   flutter_lints: ^6.0.0
+  flutter_test:
+    sdk: flutter
   mobx_codegen: ^2.0.0
   test: ^1.26.2
 
