--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.0.0
+  path_provider_platform_interface: ^2.1.2
 
 flutter:
   uses-material-design: true
