Trying to fix 'mixing icon on MacOS dmg file'

--- a/appdmg.json
+++ b/appdmg.json
@@ -1,6 +1,6 @@
 {
   "title": "Mapiah",
-  "icon": "macos/Runner/Assets.xcassets/AppIcon.appiconset/m-512x512.png",
+  "icon": "build/dmg_icon.icns",
   "contents": [
     { "x": 130, "y": 220, "type": "file", "path": "build/macos/Build/Products/Release/mapiah.app" },
     { "x": 410, "y": 220, "type": "link", "path": "/Applications" }
