--- a/.github/workflows/linux-flatpak-arm.yml
+++ b/.github/workflows/linux-flatpak-arm.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build:
     name: Build Flatpak (ARM)
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-24.04-arm64
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -47,19 +47,18 @@ jobs:
         set -x
         sudo add-apt-repository -y ppa:flatpak/stable
         sudo apt-get update
-        sudo apt-get install -y flatpak flatpak-builder qemu-user-static
+        sudo apt-get install -y flatpak flatpak-builder
         flatpak --version
         flatpak-builder --version
-        qemu-aarch64-static --version
 
     - name: Install Flatpak Builder dependencies (ARM)
       run: |
         set -e
         set -x
         sudo flatpak remote-add --system --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-        sudo flatpak install --system --noninteractive org.freedesktop.Sdk/aarch64/24.08
-        sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/aarch64/24.08
-        sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19/aarch64/24.08
+        sudo flatpak install --system --noninteractive org.freedesktop.Sdk/24.08
+        sudo flatpak install --system --noninteractive flathub org.freedesktop.Platform/24.08
+        sudo flatpak install --system --noninteractive flathub org.freedesktop.Sdk.Extension.llvm19/24.08
 
     - name: Clean host build artifacts
       run: |
@@ -76,8 +75,8 @@ jobs:
         echo "TAG=$TAG" >> $GITHUB_ENV
         echo "TAG_NUMBER=$TAG_NUMBER" >> $GITHUB_ENV
         echo "FLATPAK_INSTALLER=$FLATPAK_INSTALLER" >> $GITHUB_ENV
-        sudo flatpak-builder --force-clean --arch=aarch64 --repo=repo --install-deps-from=flathub build-dir packaging/linux/flatpak/built-locally/org.mapiah.mapiah.yml
-        flatpak build-bundle repo "$FLATPAK_INSTALLER" org.mapiah.mapiah --arch=aarch64
+        flatpak-builder --force-clean --repo=repo --install-deps-from=flathub build-dir packaging/linux/flatpak/built-locally/org.mapiah.mapiah.yml
+        flatpak build-bundle repo "$FLATPAK_INSTALLER" org.mapiah.mapiah
 
     - name: Publish Release
       env:
