--- a/.github/workflows/linux-flatpak-arm.yml
+++ b/.github/workflows/linux-flatpak-arm.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   build:
     name: Build Flatpak (ARM)
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-24.04-arm
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
