--- a/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
+++ b/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
@@ -3,44 +3,48 @@ runtime: org.freedesktop.Platform
 runtime-version: '24.08'
 sdk: org.freedesktop.Sdk
 sdk-extensions:
-  - org.freedesktop.Sdk.Extension.llvm19
+- org.freedesktop.Sdk.Extension.llvm19
 command: mapiah
 finish-args:
-  - --share=ipc
-  - --socket=fallback-x11
-  - --socket=wayland
-  - --device=dri
+- --share=ipc
+- --socket=fallback-x11
+- --socket=wayland
+- --device=dri
 modules:
-  - name: mapiah
-    buildsystem: simple
-    build-options:
-      arch:
-        x86_64:
-          env:
-            BUNDLE_PATH: build/linux/x64/release/bundle
-        aarch64:
-          env:
-            BUNDLE_PATH: build/linux/arm64/release/bundle
-      append-path: /usr/lib/sdk/llvm19/bin:/run/build/mapiah/flutter/bin
-      prepend-ld-library-path: /usr/lib/sdk/llvm19/lib
-      env:
-        PUB_CACHE: /run/build/mapiah/.pub-cache
-    build-commands:
-      - flutter build linux --release
-      - install -D $BUNDLE_PATH/mapiah /app/bin/mapiah
-      - cp -r $BUNDLE_PATH/lib /app/bin/lib
-      - cp -r $BUNDLE_PATH/data /app/bin/data
-      - install -Dm644 packaging/linux/io.github.rsevero.mapiah.metainfo.xml -t /app/share/metainfo
-      - install -Dm644 packaging/linux/io.github.rsevero.mapiah.desktop -t /app/share/applications
-      - install -Dm644 assets/icons/m-64x64.png /app/share/icons/hicolor/64x64/apps/io.github.rsevero.mapiah.png
-      - install -Dm644 assets/icons/m-128x128.png /app/share/icons/hicolor/128x128/apps/io.github.rsevero.mapiah.png
-      - install -Dm644 assets/icons/m-256x256.png /app/share/icons/hicolor/256x256/apps/io.github.rsevero.mapiah.png
-      - install -Dm644 assets/icons/m-512x512.png /app/share/icons/hicolor/512x512/apps/io.github.rsevero.mapiah.png
-    sources:
-      - type: git
-        url: https://github.com/rsevero/mapiah.git
-        commit: c6295bacefd86ced88e082afa06a175b818efc95
-      - type: git
-        url: https://github.com/flutter/flutter.git
-        tag: 3.32.4
-        dest: flutter
+- name: mapiah
+  buildsystem: simple
+  build-options:
+    arch:
+      x86_64:
+        env:
+          BUNDLE_PATH: build/linux/x64/release/bundle
+      aarch64:
+        env:
+          BUNDLE_PATH: build/linux/arm64/release/bundle
+    append-path: /usr/lib/sdk/llvm19/bin:/run/build/mapiah/flutter/bin
+    prepend-ld-library-path: /usr/lib/sdk/llvm19/lib
+    env:
+      PUB_CACHE: /run/build/mapiah/.pub-cache
+  build-commands:
+  - flutter build linux --release --no-pub
+  - install -D $BUNDLE_PATH/mapiah /app/bin/mapiah
+  - cp -r $BUNDLE_PATH/lib /app/bin/lib
+  - cp -r $BUNDLE_PATH/data /app/bin/data
+  - install -Dm644 io.github.rsevero.mapiah.metainfo.xml -t /app/share/metainfo
+  - install -Dm644 packaging/linux/io.github.rsevero.mapiah.desktop -t /app/share/applications
+  - install -Dm644 assets/icons/m-64x64.png /app/share/icons/hicolor/64x64/apps/io.github.rsevero.mapiah.png
+  - install -Dm644 assets/icons/m-128x128.png /app/share/icons/hicolor/128x128/apps/io.github.rsevero.mapiah.png
+  - install -Dm644 assets/icons/m-256x256.png /app/share/icons/hicolor/256x256/apps/io.github.rsevero.mapiah.png
+  - install -Dm644 assets/icons/m-512x512.png /app/share/icons/hicolor/512x512/apps/io.github.rsevero.mapiah.png
+  sources:
+  - type: git
+    url: https://github.com/rsevero/mapiah.git
+    tag: v0.2.32
+    commit: b2702c038ca0b67af555acf85f258b2f65dc30f8
+  - type: file
+    path: io.github.rsevero.mapiah.metainfo.xml
+  - type: git
+    url: https://github.com/flutter/flutter.git
+    tag: 3.38.7
+    dest: flutter
+    commit: 3b62efc2a3da49882f43c372e0bc53daef7295a6
