--- a/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
+++ b/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
@@ -10,6 +10,7 @@ finish-args:
 - --socket=fallback-x11
 - --socket=wayland
 - --device=dri
+- --talk-name=org.freedesktop.portal.Desktop
 modules:
 - name: mapiah
   buildsystem: simple
@@ -39,7 +40,7 @@ modules:
   sources:
   - type: git
     url: https://github.com/rsevero/mapiah.git
-    tag: v0.2.33
+    tag: v0.2.34-test1
   - type: file
     path: io.github.rsevero.mapiah.metainfo.xml
   - type: git
