Fix: Portuguese help pages not being displayed
Resolve issue where Portuguese-language help content was not
being presented to users, as reported by Edvard. The system
was failing to load pt help pages despite user language preferences.

Root cause: Portuguese help pages were not included in assets.

Changes:
- include portuguese help pages in assets list.

This ensures Portuguese-speaking users receive help content
in their preferred language as intended.

Requested-by: Edvard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ flutter:
     - assets/help/en/keyboard_shortcuts_main.md
     - assets/help/en/mapiah_home_help.md
     - assets/help/en/th2_file_edit_page_help.md
+    - assets/help/pt/keyboard_shortcuts_edit.md
+    - assets/help/pt/keyboard_shortcuts_main.md
+    - assets/help/pt/mapiah_home_help.md
+    - assets/help/pt/th2_file_edit_page_help.md
     - assets/help/images/buttonAddArea.png
     - assets/help/images/buttonAddElement.png
     - assets/help/images/buttonAddLine.png
