--- a/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
+++ b/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
@@ -10,6 +10,8 @@ finish-args:
 - --socket=fallback-x11
 - --socket=wayland
 - --device=dri
+- --env=GIO_USE_PORTAL=1
+- --env=GTK_USE_PORTAL=1
 modules:
 - name: mapiah
   buildsystem: simple
@@ -39,7 +41,7 @@ modules:
   sources:
   - type: git
     url: https://github.com/rsevero/mapiah.git
-    tag: v0.2.34-test2
+    tag: v0.2.34-test4
   - type: file
     path: io.github.rsevero.mapiah.metainfo.xml
   - type: git
