--- a/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
+++ b/packaging/linux/flatpak/built-on-flathub/io.github.rsevero.mapiah/flatpak-flutter.yml
@@ -42,7 +42,7 @@ modules:
   sources:
   - type: git
     url: https://github.com/rsevero/mapiah.git
-    tag: v0.2.34-test5
+    tag: v0.2.34
   - type: file
     path: io.github.rsevero.mapiah.metainfo.xml
   - type: git
