--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mapiah
 description: Graphical interface for Therion cave mapping software written in Flutter.
-version: 0.2.34-test5
+version: 0.2.34
 homepage: https://mapiah.org
 repository: https://github.com/rsevero/mapiah.git
 issue_tracker: https://github.com/rsevero/mapiah/issues
