--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_drawing: ^1.0.1
   path_provider: ^2.0.0
   petitparser: ^7.0.1
+  shared_preferences: ^2.5.4
   toml: ^0.18.0
   url_launcher: ^6.3.1
   web: ^1.1.1
