--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = mapiah
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.mapiah
+PRODUCT_BUNDLE_IDENTIFIER = io.github.rsevero.mapiah
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
