--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ flutter:
     - assets/icons/add_element-addPoint.png
     - assets/icons/change-image-tool.png
     - assets/icons/change-scrap-tool.png
-    - assets/icons/org.mapiah.mapiah.png
+    - assets/icons/io.github.rsevero.mapiah.png
     - assets/icons/select-tool.png
     - assets/icons/snap-tool.png
     - assets/icons/zoom_minus.png
@@ -107,7 +107,7 @@ flutter:
     - assets/images/image_not_found.png
 
 flutter_launcher_icons:
-  image_path: assets/icons/org.mapiah.mapiah.png
+  image_path: assets/icons/io.github.rsevero.mapiah.png
   windows:
     generate: true
     icon_size: 256
